--- a/apps/gocd/units/gocd-agent-ci-app.service
+++ b/apps/gocd/units/gocd-agent-ci-app.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=gocd agent
+Description=gocd agent ci app
 Requires=gocd.service
 After=gocd.service
 
@@ -9,9 +9,9 @@ EnvironmentFile=/var/lib/apps/gocd/envvars
 TimeoutStartSec=0
 ExecStartPre=/var/lib/apps/bin/dkpull ${GOCD_AGENT_IMAGE}
 ExecStartPre=-/usr/bin/docker rm %n
-ExecStart=/usr/bin/sh -c "/usr/bin/docker run --rm --name %n ${GOCD_AGENT_OPTS} ${GOCD_AGENT_IMAGE}"
-ExecStartPost=/var/lib/apps/bin/dns-set gocd-agent $COREOS_PUBLIC_IPV4
+ExecStart=/usr/bin/sh -c "/usr/bin/docker run --rm --name %n ${GOCD_AGENT_CI_APP_OPTS} ${GOCD_AGENT_IMAGE}"
+ExecStartPost=/var/lib/apps/bin/dns-set gocd-agent-ci-app $COREOS_PUBLIC_IPV4
 ExecStop=-/usr/bin/docker stop %n
-ExecStopPost=-/var/lib/apps/bin/dns-delete gocd-agent
+ExecStopPost=-/var/lib/apps/bin/dns-delete gocd-agent-ci-app
 RestartSec=10
 Restart=always
